--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
+    "lucide-react": "^0.452.0",
     "mysql2": "^3.11.3"
   },
   "devDependencies": {
